syntax = "proto3";

package scanner;

import "google/protobuf/timestamp.proto";

option go_package = "scannerpb";

message ScannerFileInfo {
    string id = 1;        
	string path = 2;      
	string owner = 3;     
	string name = 4;      
	string extension = 5; 
}

message ScannerRequest {
    google.protobuf.Timestamp dateTime = 1;
}

message ScannerResponse {
    repeated ScannerFileInfo files = 1;
}

service FileScannerService {
    rpc ScanForNewFiles(ScannerRequest) returns (ScannerResponse) {};
}